# effectice_c_ex

./: CMakeLists.txt  build.sh
src/: hello_im.c  hello_prnf.c
src/chapter_1/: hello.c  hello_prnf.c
src/chapter_2/: alignment.c  exercise_2_1.c  exercise_2_2.c  scope.c  storage.c  swap.c
